@@ -6,25 +6,25 @@ import static messages.domain.JobStatusMessageFactory.prepareJobStartedMessage;
 
 import agents.server.ServerAgent;
 import domain.job.Job;
-import domain.job.JobInstanceIdentifier;
 import domain.job.JobStatusEnum;
 import jade.core.AID;
 import jade.core.Agent;
 import jade.core.behaviours.WakerBehaviour;
 import jade.lang.acl.ACLMessage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class StartJobExecution extends WakerBehaviour {
 
     private static final Logger logger = LoggerFactory.getLogger(StartJobExecution.class);
     private final ServerAgent myServerAgent;
-    private final JobInstanceIdentifier jobToExecute;
+    private final Job jobToExecute;
     private final boolean informCNAStart;
     private final boolean informCNAFinish;
 
@@ -33,16 +33,16 @@ public class StartJobExecution extends WakerBehaviour {
      *
      * @param agent           agent that is executing the behaviour
      * @param startDate       time when the job execution should begin
-     * @param jobId           identifier of the job that is to be executed
+     * @param job             job which execution should start
      * @param informCNAStart  flag indicating whether the cloud network should be informed about job start
      * @param informCNAFinish flag indicating whether the cloud network should be informed about job finish
      */
     private StartJobExecution(Agent agent, Date startDate,
-                              final JobInstanceIdentifier jobId,
+                              final Job job,
                               final boolean informCNAStart,
                               final boolean informCNAFinish) {
         super(agent, startDate);
-        this.jobToExecute = jobId;
+        this.jobToExecute = job;
         myServerAgent = (ServerAgent) agent;
         this.informCNAStart = informCNAStart;
         this.informCNAFinish = informCNAFinish;
@@ -54,17 +54,17 @@ public class StartJobExecution extends WakerBehaviour {
      * will start immediately
      *
      * @param serverAgent     agent that will execute the behaviour
-     * @param jobId           identifier of the job that is to be executed
+     * @param job             job to execute
      * @param informCNAStart  flag indicating whether the cloud network should be informed about job start
      * @param informCNAFinish flag indicating whether the cloud network should be informed about job finish
      * @return behaviour to be run
      */
     public static StartJobExecution createFor(final ServerAgent serverAgent,
-                                              final JobInstanceIdentifier jobId,
+                                              final Job job,
                                               final boolean informCNAStart,
                                               final boolean informCNAFinish) {
-        final OffsetDateTime startDate = getCurrentTime().isAfter(jobId.getStartTime()) ? getCurrentTime() : jobId.getStartTime();
-        return new StartJobExecution(serverAgent, Date.from(startDate.toInstant()), jobId, informCNAStart, informCNAFinish);
+        final OffsetDateTime startDate = getCurrentTime().isAfter(job.getStartTime()) ? getCurrentTime() : job.getStartTime();
+        return new StartJobExecution(serverAgent, Date.from(startDate.toInstant()), job, informCNAStart, informCNAFinish);
     }
 
     /**
@@ -74,28 +74,26 @@ public class StartJobExecution extends WakerBehaviour {
      */
     @Override
     protected void onWake() {
-        final Job job = myServerAgent.manage().getJobByIdAndStartDate(jobToExecute.getJobId(), jobToExecute.getStartTime());
-        if(!myServerAgent.getGreenSourceForJobMap().containsKey(jobToExecute.getJobId())) {
+        if (!myServerAgent.getGreenSourceForJobMap().containsKey(jobToExecute.getJobId())) {
             logger.info("[{}] Job execution couldn't start: there is no green source for the job {}", myServerAgent.getLocalName(), jobToExecute.getJobId());
-        } else if(Objects.isNull(job)) {
-            logger.info("[{}] Job execution couldn't start: job {} is null", myServerAgent.getLocalName(), jobToExecute.getJobId());
-        }
-        if (Objects.nonNull(job) && myServerAgent.getGreenSourceForJobMap().containsKey(job.getJobId())) {
+        } else if (!myServerAgent.getServerJobs().containsKey(jobToExecute)) {
+            logger.info("[{}] Job execution couldn't start: job {} is not present", myServerAgent.getLocalName(), jobToExecute.getJobId());
+        } else {
             if (informCNAStart) {
-                logger.info("[{}] Start executing the job for {}", myAgent.getName(), job.getClientIdentifier());
+                logger.info("[{}] Start executing the job for {}", myAgent.getName(), jobToExecute.getClientIdentifier());
             } else {
-                logger.info("[{}] Start executing the job for {} without informing CNA", myAgent.getName(), job.getClientIdentifier());
+                logger.info("[{}] Start executing the job for {} without informing CNA", myAgent.getName(), jobToExecute.getClientIdentifier());
             }
-            if(myServerAgent.getServerJobs().get(job).equals(JobStatusEnum.ACCEPTED)) {
-                myServerAgent.getServerJobs().replace(job, JobStatusEnum.IN_PROGRESS);
+            if (myServerAgent.getServerJobs().get(jobToExecute).equals(JobStatusEnum.ACCEPTED)) {
+                myServerAgent.getServerJobs().replace(jobToExecute, JobStatusEnum.IN_PROGRESS);
             }
-            final List<AID> receivers = informCNAStart ? List.of(myServerAgent.getGreenSourceForJobMap().get(job.getJobId()), myServerAgent.getOwnerCloudNetworkAgent()) :
-                    Collections.singletonList(myServerAgent.getGreenSourceForJobMap().get(job.getJobId()));
-            final ACLMessage startedJobMessage = prepareJobStartedMessage(job.getJobId(), job.getStartTime(), receivers);
+            final List<AID> receivers = informCNAStart ? List.of(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()), myServerAgent.getOwnerCloudNetworkAgent()) :
+                    Collections.singletonList(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()));
+            final ACLMessage startedJobMessage = prepareJobStartedMessage(jobToExecute.getJobId(), jobToExecute.getStartTime(), receivers);
             displayMessageArrow(myServerAgent, receivers);
-            myServerAgent.manage().incrementStartedJobs(job.getJobId());
+            myServerAgent.manage().incrementStartedJobs(jobToExecute.getJobId());
             myAgent.send(startedJobMessage);
-            myAgent.addBehaviour(FinishJobExecution.createFor(myServerAgent, job, informCNAFinish));
+            myAgent.addBehaviour(FinishJobExecution.createFor(myServerAgent, jobToExecute, informCNAFinish));
             myAgent.removeBehaviour(this);
         }
     }
